--- a/app/views/lab/page/landing.scala.html
+++ b/app/views/lab/page/landing.scala.html
@@ -29,7 +29,7 @@
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					@components.image(Map("id"->"", "source"->routes.Assets.versioned("images/signins/IMG_2680.JPG").toString, "alternate"->"Third slide", "fluid"->"true", "class"->"first-slide"))
+					@components.image(Map("id"->"", "source"->routes.Assets.versioned("images/signins/IMG_2680.JPG").toString, "alternate"->"Third slide", "fluid"->"false", "class"->"first-slide"))
 					<div class="container">
 						<div class="carousel-caption text-left">
 							<h1>Example headline.</h1>
@@ -44,7 +44,7 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					@components.image(Map("id"->"", "source"->routes.Assets.versioned("images/signins/IMG_2702.JPG").toString, "alternate"->"Third slide", "fluid"->"true", "class"->"second-slide"))
+					@components.image(Map("id"->"", "source"->routes.Assets.versioned("images/signins/IMG_2702.JPG").toString, "alternate"->"Third slide", "fluid"->"false", "class"->"second-slide"))
 					<div class="container">
 						<div class="carousel-caption">
 							<h1>Another example headline.</h1>
@@ -59,7 +59,7 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					@components.image(Map("id"->"", "source"->routes.Assets.versioned("images/signins/IMG_2748.JPG").toString, "alternate"->"Third slide", "fluid"->"true", "class"->"third-slide"))
+					@components.image(Map("id"->"", "source"->routes.Assets.versioned("images/signins/IMG_2748.JPG").toString, "alternate"->"Third slide", "fluid"->"false", "class"->"third-slide"))
 					<div class="container">
 						<div class="carousel-caption text-right">
 							<h1>One more for good measure.</h1>
