--- a/app/views/manage/company/organization/tree/index.scala.html
+++ b/app/views/manage/company/organization/tree/index.scala.html
@@ -35,7 +35,7 @@
 		<link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/manage/company/organization/list/tree.css")'>
 	}
 
-	@body("manage","organizationUnit"){
+	@body("manage","company"){
 
 		@components.container(Map("id"->"", "fluid"->"true", "class"->"mt-3")){
 
