--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -196,6 +196,8 @@
 							Map("name"->"FullCalendar", "icon"->"fas fa-calendar-alt", "link"->"http://fullcalendar.io", "info"->""),
 							Map("name"->"OpenLayers", "icon"->"far fa-map", "link"->"http://www.openlayers.org/", "info"->""),
 							Map("name"->"Shepherd", "icon"->"fas fa-pencil-alt", "link"->"http://github.hubspot.com/shepherd/docs/welcome/", "info"->""),
+							Map("name"->"QuaggaJS", "icon"->"fas fa-barcode", "link"->"https://github.com/serratus/quaggaJS", "info"->""),
+							Map("name"->"jsQR", "icon"->"fas fa-qrcode", "link"->"https://github.com/cozmo/jsQR", "info"->""),
 							Map("name"->"Material Icons", "icon"->"fas fa-font", "link"->"http://google.github.io/material-design-icons/", "info"->""),
 							Map("name"->"IcoFont", "icon"->"fas fa-font", "link"->"http://icofont.com/", "info"->""),
 							Map("name"->"Holder.js", "icon"->"fas fa-pencil-alt", "link"->"http://imsky.github.io/holder/", "info"->""),
