--- a/app/views/lab/maintenance/detail.scala.html
+++ b/app/views/lab/maintenance/detail.scala.html
@@ -17,7 +17,7 @@
 		@libraries.standard.head()
 	}
 
-	@body("lab","manage"){
+	@body("lab","maintenance"){
 
 		@components.container(Map("id"->"", "fluid"->"true", "class"->"mt-3")){
 			@breadcrumb(Map("id"->"", "name"->Messages(MessageKeys.DETAIL), "icon"->"fas fa-pencil-alt", "selected"->"true"))
