--- a/app/views/manage/company/organization/list/index.scala.html
+++ b/app/views/manage/company/organization/list/index.scala.html
@@ -56,7 +56,7 @@
 		<link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/manage/company/organization/list/index.css")'>
 	}
 
-	@body("manage","organizationUnit"){
+	@body("manage","company"){
 
 		@components.container(Map("id"->"", "fluid"->"true", "class"->"mt-3")){
 
