--- a/public/stylesheets/lab/ui/draganddrop.css
+++ b/public/stylesheets/lab/ui/draganddrop.css
@@ -15,13 +15,13 @@
 	z-index:1000;
 }
 
-#Usagi_Tsukino{background-color:#efd03f;}
-#Ami_Mizuno{background-color:#0275d8;}
-#Rei_Hino{background-color:#930f1c;}
-#Makoto_Kino{background-color:#1b7830;}
-#Minako_Aino{background-color:#e96414;}
-#Chibiusa{background-color:#ec99bc;}
-#Haruka_Tenoh{background-color:#0e257f;}
-#Michiru_Kaioh{background-color:#267d68;}
-#Setsuna_Meioh{background-color:#0e150a;}
-#Hotaru_Tomoe{background-color:#62529e;}
+#Usagi_Tsukino{color:#fff;background-color:#efd03f;}
+#Ami_Mizuno{color:#fff;background-color:#0275d8;}
+#Rei_Hino{color:#fff;background-color:#930f1c;}
+#Makoto_Kino{color:#fff;background-color:#1b7830;}
+#Minako_Aino{color:#fff;background-color:#e96414;}
+#Chibiusa{color:#fff;background-color:#ec99bc;}
+#Haruka_Tenoh{color:#fff;background-color:#0e257f;}
+#Michiru_Kaioh{color:#fff;background-color:#267d68;}
+#Setsuna_Meioh{color:#fff;background-color:#0e150a;}
+#Hotaru_Tomoe{color:#fff;background-color:#62529e;}
