Follow Play Framework v2.6.12

--- a/app/views/body.scala.html
+++ b/app/views/body.scala.html
@@ -163,9 +163,9 @@
 
 			@content
 
-			<footer id="system_credit-container" class="container-fluid text-center">
+			<footer id="system_footer-container" class="container-fluid d-print-none">
 
-				@components.credit()
+				@footer()
 			</footer>
 		</div>
 
