--- a/app/views/lab/page/ilike.scala.html
+++ b/app/views/lab/page/ilike.scala.html
@@ -28,33 +28,33 @@
 					<div class="i_space">
 
 						@components.listgroup(Map("id"->""), List(
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio")
+							Map("id"->"", "type"->"", "iconType"->"warning", "icon"->"fas fa-plane fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"primary", "icon"->"fas fa-wifi fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"primary", "icon"->"fab fa-bluetooth-b fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"success", "icon"->"fas fa-square fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"success", "icon"->"fas fa-square fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"success", "icon"->"fas fa-phone-square fa-fw", "text"->"Cras justo odio")
 						))
 					</div>
 					<div class="i_space">
 
 						@components.listgroup(Map("id"->""), List(
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio")
+							Map("id"->"", "type"->"", "iconType"->"danger", "icon"->"fas fa-square fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"secondary", "icon"->"fas fa-square fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"primary", "icon"->"fas fa-moon fa-fw", "text"->"Cras justo odio")
 						))
 					</div>
 					<div class="i_space">
 
 						@components.listgroup(Map("id"->""), List(
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio", "selected"->"true"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio")
+							Map("id"->"", "type"->"", "iconType"->"secondary", "icon"->"fas fa-cog fa-fw", "text"->"Cras justo odio", "selected"->"true"),
+							Map("id"->"", "type"->"", "iconType"->"primary", "icon"->"fas fa-font fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"info", "icon"->"fas fa-square fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"danger", "icon"->"fas fa-volume-up fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"dark", "icon"->"fas fa-square fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"danger", "icon"->"fas fa-square fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"success", "icon"->"fas fa-battery-full fa-fw", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "iconType"->"secondary", "icon"->"fas fa-hand-paper fa-fw", "text"->"Cras justo odio")
 						))
 					</div>
 				</div>
@@ -64,44 +64,44 @@
 					<div class="i_space">
 
 						@components.listgroup(Map("id"->""), List(
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio")
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio")
 						))
 					</div>
 					<div class="i_space">
 
 						@components.listgroup(Map("id"->""), List(
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio")
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio")
 						))
 					</div>
 					<div class="i_space">
 
 						@components.listgroup(Map("id"->""), List(
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio")
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio")
 						))
 					</div>
 					<div class="i_space">
 
 						@components.listgroup(Map("id"->""), List(
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio")
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio")
 						))
 					</div>
 					<div class="i_space">
 
 						@components.listgroup(Map("id"->""), List(
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio")
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio")
 						))
 					</div>
 					<div class="i_space">
 
 						@components.listgroup(Map("id"->""), List(
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio"),
-							Map("id"->"", "type"->"", "icon"->"fas fa-spinner fa-pulse", "text"->"Cras justo odio")
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio"),
+							Map("id"->"", "type"->"", "icon"->"fas fa-square", "text"->"Cras justo odio")
 						))
 					</div>
 				</div>
