--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -73,15 +73,12 @@ body {
 	transition-timing-function: linear;
 }
 
-#system_credit-container{
+#system_footer-container{
 	background-color: rgb(92, 136, 169);
-	padding-top: 15px;
 	width: 100%;
-	height: 200px;
-	opacity: 0.7;
 }
 
-#system_credit-container>a{
+#system_footer-container .system_credit{
 	color: white;
 }
 
