--- a/app/views/manage/batch/index.scala.html
+++ b/app/views/manage/batch/index.scala.html
@@ -147,7 +147,7 @@
 				@components.button(Map("id"->"reloadButton", "type"->"primary", "outline"->"true", "icon"->"fas fa-redo", "text"->Messages(MessageKeys.RELOAD)))
 			</div>
 
-			<div class="mb-3 table-responsive">
+			<div class="mb-3 dataTable-responsive">
 				@components.table(Map("id"->"jobExecutionlist", "class"->"w-100", "bordered"->"true"),
 					Map("id"->""),Tuple2(Map("id"->""),List(
 						Map("id"->"", "head"->"true", "text"->Messages(MessageKeys.NAME)),
