--- a/app/views/manage/company/index.scala.html
+++ b/app/views/manage/company/index.scala.html
@@ -87,7 +87,7 @@
 			@deletedialog()
 			@uploaddialog()
 
-			<div class="mb-3 table-responsive">
+			<div class="mb-3 dataTable-responsive">
 				@components.table(Map("id"->"companylist", "class"->"", "bordered"->"true"),
 					Map("id"->""),Tuple2(Map("id"->""),List(
 						Map("id"->"", "head"->"true", "text"->Messages(MessageKeys.ID)),
