--- a/app/views/manage/company/organization/list/index.scala.html
+++ b/app/views/manage/company/organization/list/index.scala.html
@@ -106,7 +106,7 @@
 			@deletedialog(form)
 			@uploaddialog(form)
 
-			<div class="mb-3 table-responsive">
+			<div class="mb-3 dataTable-responsive">
 				@components.table(Map("id"->"organizationUnitlist", "class"->"", "bordered"->"true"),
 					Map("id"->""),Tuple2(Map("id"->""),List(
 						Map("id"->"", "head"->"true", "text"->Messages(MessageKeys.ID)),
