--- a/app/views/framework/application/tasks.scala.html
+++ b/app/views/framework/application/tasks.scala.html
@@ -20,6 +20,7 @@
 	<a href="@controllers.framework.application.routes.Application.index("request").toString()" class="list-group-item @("active".when(equalTask("request")))">@Messages(MessageKeys.REQUEST)</a>
 	<a href="@controllers.framework.application.routes.Application.index("exception").toString()" class="list-group-item @("active".when(equalTask("exception")))">Exception</a>
 	<a href="@controllers.framework.application.routes.Application.index("reporterror").toString()" class="list-group-item @("active".when(equalTask("reporterror")))">@(Messages(MessageKeys.REPORT)+" "+Messages(MessageKeys.ERROR))</a>
+	<a href="@controllers.framework.application.routes.Application.index("clock").toString()" class="list-group-item @("active".when(equalTask("clock")))">@Messages(MessageKeys.CLOCK)</a>
 	<a href="@controllers.framework.application.routes.Application.index("datetime").toString()" class="list-group-item @("active".when(equalTask("datetime")))">@Messages(MessageKeys.DATETIME)</a>
 	<a href="@controllers.framework.application.routes.Application.index("daylightsavingtime").toString()" class="list-group-item @("active".when(equalTask("daylightsavingtime")))">@Messages(MessageKeys.DAYLIGHT__SAVING__TIME)</a>
 	<a href="@controllers.framework.application.routes.Application.index("entitymanager").toString()" class="list-group-item @("active".when(equalTask("entitymanager")))">EntityManager</a>
