--- a/app/views/manage/user/index.scala.html
+++ b/app/views/manage/user/index.scala.html
@@ -111,7 +111,7 @@
 			@deletedialog()
 			@uploaddialog()
 
-			<div class="mb-3 table-responsive">
+			<div class="mb-3 dataTable-responsive">
 				@components.table(Map("id"->"userlist", "class"->"", "bordered"->"true"),
 					Map("id"->""),Tuple2(Map("id"->""),List(
 						Map("id"->"", "head"->"true", "text"->Messages(MessageKeys.USER_USERID)),
