--- a/app/views/libraries/bootbox/last.scala.html
+++ b/app/views/libraries/bootbox/last.scala.html
@@ -7,7 +7,9 @@
 
 <script type='text/javascript' src='@routes.Assets.versioned("lib/custom/bootbox/head.css.js")'></script>
 
-<script type='text/javascript' src='@routes.Assets.versioned("lib/bootbox/bootbox.min.js")'></script>
+<script type='text/javascript' src='@routes.Assets.versioned("lib/bootbox-5.x/src/bootbox.js")'></script>
+<script type='text/javascript' src='@routes.Assets.versioned("lib/bootbox-5.x/src/bootbox.locales.js")'></script>
+<!-- <script type='text/javascript' src='@routes.Assets.versioned("lib/bootbox/bootbox.min.js")'></script> -->
 
 <div id="bootbox_messages" class="d-none" data-messages='{
 	"@MessageKeys.BOOTBOX_LANG":"@Messages(MessageKeys.BOOTBOX_LANG)"
