--- a/app/views/components/credit.scala.html
+++ b/app/views/components/credit.scala.html
@@ -7,4 +7,5 @@
 
 @import java.text._
 
+<!-- Can be changed. -->
 <a class="system_credit" href="@Messages(MessageKeys.MYCOMPANY_LINK)">&copy; 2017-@Year.now() @Messages(MessageKeys.MYCOMPANY_NAME)</a>
