--- a/app/views/environment/javalang/breadcrumb.scala.html
+++ b/app/views/environment/javalang/breadcrumb.scala.html
@@ -16,7 +16,7 @@
 	val lastElement = prop - "id"
 	val elements = scala.collection.mutable.ListBuffer[Map[String, String]](
 		Map("name"->Messages(MessageKeys.ENVIRONMENT), "icon"->"fas fa-thermometer-half", "link"->controllers.environment.javalang.routes.Java.index().toString()),
-		Map("name"->Messages(MessageKeys.JAVA), "icon"->"fas fa-coffee", "link"->controllers.environment.javalang.routes.Java.index().toString())
+		Map("name"->Messages(MessageKeys.JAVA), "icon"->"fab fa-java", "link"->controllers.environment.javalang.routes.Java.index().toString())
 	)
 	elements += lastElement
 
