--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -16,6 +16,13 @@
 		<div class="col-12 col-md">
 			@components.image(Map("id"->"", "class"->"w-36p h-36p if-monochrome if-inverse", "source"->routes.Assets.versioned("images/brand.png").toString, "alternate"->"brand"))
 			<small class="d-block mb-3">@components.credit()</small>
+
+			<ul class="list-unstyled m-0 p-0 mb-3">
+				<li class="d-inline-block mr-3"><a href="#" class="text-white">@components.icon(Map("id"->"", "icon"->"fab fa-twitter", "class"->"h4"))</a></li>
+				<li class="d-inline-block mr-3"><a href="#" class="text-white">@components.icon(Map("id"->"", "icon"->"fab fa-facebook-f", "class"->"h4"))</a></li>
+				<li class="d-inline-block mr-3"><a href="#" class="text-white">@components.icon(Map("id"->"", "icon"->"fab fa-instagram", "class"->"h4"))</a></li>
+				<li class="d-inline-block mr-3"><a href="#" class="text-white">@components.icon(Map("id"->"", "icon"->"fab fa-pinterest-p", "class"->"h4"))</a></li>
+			</ul>
 		</div>
 		<div class="col-6 col-md draft">
 			<h5><span>Features</span></h5>
