--- a/app/views/top/workmenu.scala.html
+++ b/app/views/top/workmenu.scala.html
@@ -9,7 +9,7 @@
 
 @(prop:scala.collection.immutable.Map[String, String], groupToElementsList:Seq[Tuple2[ /*section*/ scala.collection.immutable.Map[String, String], /*work*/ Seq[scala.collection.immutable.Map[String, String]]]])
 
-<nav id="system_menu" class="navbar navbar-expand-md fixed-top navbar-light bg-light shadow-light">
+<nav id="system_menu" class="navbar navbar-expand-md fixed-top navbar-light bg-light shadow-sm">
 	<a class="navbar-brand" href="@controllers.user.routes.User.index()">
 		@components.image(Map("id"->"", "source"->routes.Assets.versioned("images/brand.png").toString, "alternate"->"brand"))
 	</a>
