--- a/app/views/lab/application/storeform.scala.html
+++ b/app/views/lab/application/storeform.scala.html
@@ -53,6 +53,10 @@
 							<input type="password" class="form-control" id="exampleInputPassword1" name="exampleInputPassword1" placeholder="Password">
 						</div>
 						<div class="form-group">
+							<label for="exampleInputRange1">Range</label>
+							<input type="range" class="form-control-range" id="exampleInputRange1" name="exampleInputRange1">
+						</div>
+						<div class="form-group">
 							<label for="exampleSelect1">Select</label>
 							<select class="form-control" id="exampleSelect1" name="exampleSelect1">
 								<option value="1">1</option>
