--- a/app/views/libraries/fontawesome/head.scala.html
+++ b/app/views/libraries/fontawesome/head.scala.html
@@ -1,5 +1,4 @@
 @()
 
-<link rel='stylesheet'
-	href='@routes.Assets.versioned("lib/fontawesome-free/web-fonts-with-css/css/fontawesome-all.min.css")'>
+<link rel='stylesheet' href='@routes.Assets.versioned("lib/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css")'>
 
