--- a/app/views/setting/user/changeuser/change.scala.html
+++ b/app/views/setting/user/changeuser/change.scala.html
@@ -49,7 +49,7 @@
 					</div>
 					<div class="col-md-10 col-lg-8 col-xl-6">
 
-						@components.card(Map("id"->"changePanel", "class"->"shadow-light")){
+						@components.card(Map("id"->"changePanel", "class"->"shadow-sm")){
 							<div class="card-header">
 								@Messages(MessageKeys.CHANGEUSER)
 							</div>
