--- a/app/views/setting/user/changeuser/decision/complete.scala.html
+++ b/app/views/setting/user/changeuser/decision/complete.scala.html
@@ -28,7 +28,7 @@
 			<div class="col-md-1 col-lg-2 col-xl-3">
 			</div>
 			<div class="col-md-10 col-lg-8 col-xl-6 p-0">
-				@components.card(Map("id"->"completePanel", "class"->"shadow-light")){
+				@components.card(Map("id"->"completePanel", "class"->"shadow-sm")){
 					<div class="card-header">
 						@Messages(MessageKeys.CHANGEUSER)
 					</div>
