--- a/app/views/setting/user/changeuser/reserve/complete.scala.html
+++ b/app/views/setting/user/changeuser/reserve/complete.scala.html
@@ -39,7 +39,7 @@
 				<div class="col-md-1 col-lg-2 col-xl-3">
 				</div>
 				<div class="col-md-10 col-lg-8 col-xl-6">
-					@components.card(Map("id"->"completePanel", "class"->"shadow-light")){
+					@components.card(Map("id"->"completePanel", "class"->"shadow-sm")){
 						<div class="card-header">
 							@Messages(MessageKeys.CHANGEUSER)
 						</div>
