--- a/app/views/lab/ui/tasks.scala.html
+++ b/app/views/lab/ui/tasks.scala.html
@@ -30,5 +30,6 @@
 	<a href="@controllers.lab.ui.routes.UI.index("fixedbar").toString()" class="list-group-item @("active".when(equalTask("fixedbar")))">Fixed bar</a>
 	<a href="@controllers.lab.ui.routes.UI.index("bigtypo").toString()" class="list-group-item @("active".when(equalTask("bigtypo")))">Big typo</a>
 	<a href="@controllers.lab.ui.routes.UI.index("block").toString()" class="list-group-item @("active".when(equalTask("block")))">Block</a>
+	<a href="@controllers.lab.ui.routes.UI.index("autumnboard").toString()" class="list-group-item @("active".when(equalTask("autumnboard")))">Autumn board</a>
 	<a href="@controllers.lab.ui.routes.UI.index("window").toString()" class="list-group-item @("active".when(equalTask("window")))">@Messages(MessageKeys.WINDOW)</a>
 </div>
