--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -187,6 +187,7 @@
 							Map("name"->"diff2html", "icon"->"fas fa-pencil-alt", "link"->"https://diff2html.xyz", "info"->""),
 							Map("name"->"marked", "icon"->"fas fa-code", "link"->"https://github.com/chjj/marked", "info"->""),
 							Map("name"->"Parsley", "icon"->"fas fa-pencil-alt", "link"->"http://parsleyjs.org", "info"->""),
+							Map("name"->"Hammer.js", "icon"->"fas fa-hand-point-up", "link"->"http://hammerjs.github.io", "info"->""),
 							Map("name"->"bootstrap-colorpicker", "icon"->"fas fa-tint", "link"->"https://itsjavi.com/bootstrap-colorpicker/", "info"->""),
 							Map("name"->"jqTree", "icon"->"fas fa-sitemap", "link"->"http://mbraak.github.io/jqTree/#node-functions", "info"->""),
 							Map("name"->"Snap.svg", "icon"->"fas fa-pencil-alt", "link"->"http://snapsvg.io/", "info"->""),
