--- a/app/views/lab/application/upload.scala.html
+++ b/app/views/lab/application/upload.scala.html
@@ -22,7 +22,7 @@
 
 		@components.container(Map("id"->"", "fluid"->"true", "class"->"mt-3")){
 
-			@breadcrumb(Map("id"->"", "name"->Messages(MessageKeys.UPLOAD), "icon"->"fas fa-pencil-alt", "selected"->"true"))
+			@breadcrumb(Map("id"->"", "name"->Messages(MessageKeys.UPLOAD), "icon"->"fas fa-upload", "selected"->"true"))
 		}
 
 		@components.container(Map("id"->"", "fluid"->"true")){
